--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -10,4 +10,8 @@
     <None Remove="Models\**" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.2" />
+  </ItemGroup>
+
 </Project>
