--- a/Proconsulta/appsettings.json
+++ b/Proconsulta/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=EDSON\\SqlExpress;Database=dbteste;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=WKSPRO-044\\SQLEXPRESS;Database=ProDb;Uid=sa;Pwd=sa;;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
